add fonts for title and top text

--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -49,8 +49,8 @@
     <section id="Top">
       <div class="top-container">
         <div class="top-text123">
-          <p id="top-text1">{{ "Hey there!"|t }}</p>
-          <p id="top-text2">{{ "I'm Toshifumi"|t }}</p>
+          {#<p id="top-text1">{{ "Hey there!"|t }}</p>#}
+          <p id="top-text2">{{ "Hey there! I'm Toshifumi"|t }}</p>
           <p id="top-text3">{{ "I love creating websites and videos."|t }}</p>
         </div>
         <div class="top-img">
