--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -138,6 +138,10 @@ section {
 .header-container h1 {
   font-size: 1.8rem;
   margin: 0;
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .nav-menu {
@@ -253,6 +257,10 @@ section {
   opacity: 1;
   transform: translateX(0);
   transition: all 1s ease;
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .top-text123 p {
