Change about to about me

--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -24,7 +24,7 @@
       <h1>Portfolio - Toshifumi Kamino</h1>
       <nav aria-label="{{ 'Main Navigation'|t }}">
         <ul class="nav-menu">
-          <li><a href="#about">{{ 'About'|t }}</a></li>
+          <li><a href="#about">{{ 'About Me'|t }}</a></li>
           <li><a href="#projects">{{ 'My Projects'|t }}</a></li>
           <li><a href="#contact">{{ 'Contact Me'|t }}</a></li>
         </ul>
