--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -7,7 +7,7 @@ html {
 
 body {
   font-family: 'Lato', sans-serif;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   margin: 0;
   padding: 0;
   line-height: 1.6;
@@ -265,7 +265,7 @@ section {
 }
 
 .top-text123 p {
-  font-size: 3rem !important;
+  font-size: 2.5rem !important;
   font-weight: 300;
   margin: 0.5rem 0;
 }
@@ -318,6 +318,7 @@ section {
 
 #about {
   margin: auto;
+  height: 100vh;
 }
 
 #about-text {
